Add geographic queries for Healthcare providers.

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,10 @@
   "profiles": {
     "CAHealthQueries": {
       "commandName": "Project",
-      "workingDirectory": "D:\\dev\\repos\\CAHealthQueries\\"
+      "workingDirectory": "D:\\dev\\repos\\CAHealthQueries\\",
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
+      }
     }
   }
 }
