--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "IncludeScopes":  false,
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
